# arrayed-degradation-assay

./: LICENSE.txt  README.md  licenses_links.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
arrayed_degradation/: analyze_experiment.py  analyze_single_rna.py  decay_curve.py  exceptions.py  fails.py  input_data.py  log.py  peaks.py  plots.py  results.py
arrayed_degradation/tests/: test_fails.py  test_peaks.py
data/: expected_results.csv  plate_map.csv  results.csv
data/plate_1/: epg.csv  plate_map.csv
data/plate_2/: epg.csv
src/arrayed_degradation/: analyze_experiment.py  analyze_single_rna.py  decay_curve.py  log.py  plots.py
src/arrayed_degradation/tests/: test_e2e.py  test_fails.py  test_input_data.py  test_peaks.py
tests/: test_decay_curve.py  test_e2e.py  test_input_data.py  utils.py
