[project]
name = "arrayed-degradation-assay"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Albert Roethel", email = "albert@inceptive.team" }
]
dependencies = [
    "Pillow==9.5.0",
    "kaleido==0.2.1",
    "numpy==1.23.5",
    "pandas==2.0.3",
    "pathy==0.10.1",
    "plotly==5.14.1",
    "scikit-learn==1.2.2",
    "scipy==1.11.1",
    "tqdm==4.65.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arrayed_degradation_assay"]
