[project]
name = "arrayed-degradation-assay"
version = "0.1.1"
description = "Analyse the data for RNA stability assay"
authors = [
    { name = "Albert Roethel", email = "opensource@inceptive.team" }
]
dependencies = [
    "Pillow==9.5.*",
    "kaleido==0.2.1",
    "numpy==1.23.*",
    "pandas==2.0.*",
    "pathy==0.10.*",
    "plotly==5.14.*",
    "scikit-learn==1.2.*",
    "scipy==1.11.*",
    "tqdm==4.65.*",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arrayed_degradation"]

[project.scripts]
arrayed_degradation = "arrayed_degradation.analyze_experiment:main"
